--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
   <body>
     <nav>
       <a href="/books">Books page</a>
+      <a href="/">Home page</a>
     </nav>
     <%= yield %>
   </body>
