add edit and create route and edit form page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,8 @@
     <nav>
       <a href="/books">Books page</a>
       <a href="/">Home page</a>
+      <a href="/authors">Authors</a>
+      <a href="/stock">Stock</a>
     </nav>
     <%= yield %>
   </body>
