--- a/views/books/show.erb
+++ b/views/books/show.erb
@@ -8,7 +8,7 @@
   <li><%= @book.year %></li>
 </ul>
 
-
+<a href="/books/<%= @book.id %>/edit">Edit Book</a>
 <form class="" action="/books/<%= @book.id %>/delete" method="post">
   <input type="submit" name="" value="Delete Book">
 </form>
