--- a/views/books/add_author.erb
+++ b/views/books/add_author.erb
@@ -1,9 +1,10 @@
 <h1>Add author to <%= @book.title %></h1>
 
-<form class="" action="/publication" method="post">
+<form class="" action="/publication/<%= @book.id %>" method="post">
   <select class="" name="author_id">
     <% for author in @authors %>
       <option value="<%= author.id %>"><%= author.pretty_name %></option>
     <% end %>
   </select>
+  <input type="submit" name="" value="Add Author">
 </form>
