--- a/views/books/show.erb
+++ b/views/books/show.erb
@@ -20,7 +20,7 @@
   </ul>
 
 <a href="/books/<%= @book.id %>/edit">Edit Book</a>
-<a href="/books/<%= @book.id %>/add_author">Add Author</a>
+<a href="/publication/<%= @book.id %>/add_author">Add Author</a>
 <form class="" action="/books/<%= @book.id %>/delete" method="post">
   <input type="submit" name="" value="Delete Book">
 </form>
