changed wrong spelling on date_of_birth

--- a/views/authors/new.erb
+++ b/views/authors/new.erb
@@ -8,7 +8,7 @@
   <input type="text" name="last_name">
 
   <label for="">Date of Birth</label>
-  <input type="num" name="date_of_birt" placeholder="ddmmyyyy">
+  <input type="num" name="date_of_birth" placeholder="ddmmyyyy">
 
   <label for="">Description</label>
   <textarea name="description" rows="8" cols="80"></textarea>
