--- a/views/books/new.erb
+++ b/views/books/new.erb
@@ -5,7 +5,11 @@
   <input type="text" name="title">
 
   <label for="">Book genre</label>
-  <input type="text" name="genre">
+  <select name="genre">
+    <% @genres.each do |x| %>
+      <option value="<%= x %>"><%= x %></option>
+    <% end %>
+  </select>
 
   <label for="">Book description</label>
   <input type="text" name="description">
