sort items by genre on the index page

--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -1,11 +1,9 @@
 <h1>This is the stock index page</h1>
 
-<% for item in @items %>
+<h1>Romance:</h1>
+<% for item in @sorted_by_genre[:romance]%>
   <% book_id = item.book_id %>
   <% book = Book.find_by_id(book_id) %>
-  <% @genres.each do |genre|  %>
-    <% if genre == book.genre %>
-      <h1><%= genre.capitalize %></h1>
       <ul>
         <li>Book title: <%= book.title %></li>
         <% if item.check_quantity_low %>
@@ -17,8 +15,58 @@
         <li>Selling price: £<%= item.selling_price %></li>
         <li>Markup value: £<%= item.markup %></li>
       </ul>
-    <% else %>
-      <% next %>
-    <% end %>
-  <% end %>
+<% end %>
+
+<h1>Crime:</h1>
+
+<% for item in @sorted_by_genre[:crime]%>
+  <% book_id = item.book_id %>
+  <% book = Book.find_by_id(book_id) %>
+      <ul>
+        <li>Book title: <%= book.title %></li>
+        <% if item.check_quantity_low %>
+          <li style="color: red;">Quantity: <%= item.quantity %></li>
+        <% else %>
+          <li>Quantity: <%= item.quantity %></li>
+        <% end %>
+        <li>Buying cost: £<%= item.buying_cost %></li>
+        <li>Selling price: £<%= item.selling_price %></li>
+        <li>Markup value: £<%= item.markup %></li>
+      </ul>
+<% end %>
+
+<h1>Horror:</h1>
+
+<% for item in @sorted_by_genre[:horror]%>
+  <% book_id = item.book_id %>
+  <% book = Book.find_by_id(book_id) %>
+      <ul>
+        <li>Book title: <%= book.title %></li>
+        <% if item.check_quantity_low %>
+          <li style="color: red;">Quantity: <%= item.quantity %></li>
+        <% else %>
+          <li>Quantity: <%= item.quantity %></li>
+        <% end %>
+        <li>Buying cost: £<%= item.buying_cost %></li>
+        <li>Selling price: £<%= item.selling_price %></li>
+        <li>Markup value: £<%= item.markup %></li>
+      </ul>
+<% end %>
+
+<h1>Poetry:</h1>
+
+<% for item in @sorted_by_genre[:poetry]%>
+  <% book_id = item.book_id %>
+  <% book = Book.find_by_id(book_id) %>
+      <ul>
+        <li>Book title: <%= book.title %></li>
+        <% if item.check_quantity_low %>
+          <li style="color: red;">Quantity: <%= item.quantity %></li>
+        <% else %>
+          <li>Quantity: <%= item.quantity %></li>
+        <% end %>
+        <li>Buying cost: £<%= item.buying_cost %></li>
+        <li>Selling price: £<%= item.selling_price %></li>
+        <li>Markup value: £<%= item.markup %></li>
+      </ul>
 <% end %>
