sort items by author refactored

--- a/views/stock/sorted_by_author.erb
+++ b/views/stock/sorted_by_author.erb
@@ -1,12 +1,8 @@
 <% author = Author.find_by_id(@author_id) %>
 <h1>Sort by Author: <%= author.pretty_name %> page</h1>
 
-
-
-<% if @publications != nil %>
-  <% for publication in @publications %>
-    <% if @items_books_id.include?(publication.book_id.to_s) %>
-      <% item =  Item.find_by_book_id(publication.book_id) %>
+<% if @items_by_author != []%>
+  <% for item in @items_by_author %>
       <% book_id = item.book_id %>
       <% book = Book.find_by_id(book_id) %>
       <ul>
@@ -24,7 +20,6 @@
         <input type="number" name="quantity" value="<%= item.quantity %>">
         <input type="submit" name="" value="Update Quantity">
       </form>
-    <% end %>
   <% end %>
 <% else %>
   <h1>There is no items by <%= author.pretty_name %></h1>
