--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -9,92 +9,26 @@
   <input type="submit" name="" value="Search by Author">
 </form>
 
-<h1>Romance:</h1>
+<% for genre in @genres %>
+  <h1><%= genre %>:</h1>
+  <% for item in @sorted_by_genre[genre.downcase]%>
+    <% book_id = item.book_id %>
+    <% book = Book.find_by_id(book_id) %>
+        <ul>
+          <li>Book title: <%= book.title %></li>
+          <% if item.check_quantity_low %>
+            <li style="color: red;">Quantity: <%= item.quantity %></li>
+          <% else %>
+            <li>Quantity: <%= item.quantity %></li>
+          <% end %>
 
-
-<% for item in @sorted_by_genre[:romance]%>
-  <% book_id = item.book_id %>
-  <% book = Book.find_by_id(book_id) %>
-      <ul>
-        <li>Book title: <%= book.title %></li>
-        <% if item.check_quantity_low %>
-          <li style="color: red;">Quantity: <%= item.quantity %></li>
-        <% else %>
-          <li>Quantity: <%= item.quantity %></li>
-        <% end %>
-
-        <li>Buying cost: £<%= item.buying_cost %></li>
-        <li>Selling price: £<%= item.selling_price %></li>
-        <li>Markup value: £<%= item.markup %></li>
-      </ul>
-      <form class="" action="/stock/<%= item.id %>" method="post">
-        <input type="number" name="quantity" value="<%= item.quantity %>">
-        <input type="submit" name="" value="Update Quantity">
-      </form>
-<% end %>
-
-<h1>Crime:</h1>
-
-<% for item in @sorted_by_genre[:crime]%>
-  <% book_id = item.book_id %>
-  <% book = Book.find_by_id(book_id) %>
-      <ul>
-        <li>Book title: <%= book.title %></li>
-        <% if item.check_quantity_low %>
-          <li style="color: red;">Quantity: <%= item.quantity %></li>
-        <% else %>
-          <li>Quantity: <%= item.quantity %></li>
-        <% end %>
-        <li>Buying cost: £<%= item.buying_cost %></li>
-        <li>Selling price: £<%= item.selling_price %></li>
-        <li>Markup value: £<%= item.markup %></li>
-      </ul>
-      <form class="" action="/stock/<%= item.id %>" method="post">
-        <input type="number" name="quantity" value="<%= item.quantity %>">
-        <input type="submit" name="" value="Update Quantity">
-      </form>
-<% end %>
-
-<h1>Horror:</h1>
-
-<% for item in @sorted_by_genre[:horror]%>
-  <% book_id = item.book_id %>
-  <% book = Book.find_by_id(book_id) %>
-      <ul>
-        <li>Book title: <%= book.title %></li>
-        <% if item.check_quantity_low %>
-          <li style="color: red;">Quantity: <%= item.quantity %></li>
-        <% else %>
-          <li>Quantity: <%= item.quantity %></li>
-        <% end %>
-        <li>Buying cost: £<%= item.buying_cost %></li>
-        <li>Selling price: £<%= item.selling_price %></li>
-        <li>Markup value: £<%= item.markup %></li>
-      </ul>
-      <form class="" action="/stock/<%= item.id %>" method="post">
-        <input type="number" name="quantity" value="<%= item.quantity %>">
-        <input type="submit" name="" value="Update Quantity">
-      </form>
-<% end %>
-
-<h1>Poetry:</h1>
-
-<% for item in @sorted_by_genre[:poetry]%>
-  <% book_id = item.book_id %>
-  <% book = Book.find_by_id(book_id) %>
-      <ul>
-        <li>Book title: <%= book.title %></li>
-        <% if item.check_quantity_low %>
-          <li style="color: red;">Quantity: <%= item.quantity %></li>
-        <% else %>
-          <li>Quantity: <%= item.quantity %></li>
-        <% end %>
-        <li>Buying cost: £<%= item.buying_cost %></li>
-        <li>Selling price: £<%= item.selling_price %></li>
-        <li>Markup value: £<%= item.markup %></li>
-      </ul>
-      <form class="" action="/stock/<%= item.id %>" method="post">
-        <input type="number" name="quantity" value="<%= item.quantity %>">
-        <input type="submit" name="" value="Update Quantity">
-      </form>
+          <li>Buying cost: £<%= item.buying_cost %></li>
+          <li>Selling price: £<%= item.selling_price %></li>
+          <li>Markup value: £<%= item.markup %></li>
+        </ul>
+        <form class="" action="/stock/<%= item.id %>" method="post">
+          <input type="number" name="quantity" value="<%= item.quantity %>">
+          <input type="submit" name="" value="Update Quantity">
+        </form>
+  <% end %>
 <% end %>
