added delete buttons to authors in books show page and to books in authors show page

--- a/views/authors/show.erb
+++ b/views/authors/show.erb
@@ -14,6 +14,9 @@
       <ul>
         <li>Title:<a href="/books/<%= book.id %>"> <%= book.title %></a></li>
         <li>Genre: <%= book.genre %></li>
+        <form class="" action="publication/<%= @author.id %>/<%= book.id %>/delete" method="post">
+          <input type="submit" name="" value="Delete Book">
+        </form>
       </ul>
       <% end %>
     <% else %>
