add new.erb for stock and add link to it on index page

--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -8,6 +8,7 @@
   </select>
   <input type="submit" name="" value="Search by Author">
 </form>
+<a href="/stock/new">Create new item</a>
 
 <% for genre in @genres %>
   <h1><%= genre %>:</h1>
