--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -31,5 +31,8 @@
           <input type="number" name="quantity" value="<%= item.quantity %>">
           <input type="submit" name="" value="Update Quantity">
         </form>
+        <form class="" action="/stock/<%= item.id %>/delete" method="post">
+          <input type="submit" name="" value="Delete Item">
+        </form>
   <% end %>
 <% end %>
