--- a/views/authors/show.erb
+++ b/views/authors/show.erb
@@ -6,6 +6,7 @@
   <li>Date of Birth: <%= @author.date_of_birth %></li>
   <li>Description: <%= @author.description %></li>
 </ul>
+<img src="<%= @author.profile_img %>" alt="">
 
 <p>Books:</p>
 
