--- a/views/books/show.erb
+++ b/views/books/show.erb
@@ -7,6 +7,7 @@
   <li>Book description: <%= @book.description %></li>
   <li>Year of publish: <%= @book.year %></li>
 </ul>
+<img src="<%= @book.cover %>" alt="">
 
 <p>Authors:</p>
   <ul>
