--- a/views/stock/new.erb
+++ b/views/stock/new.erb
@@ -2,7 +2,7 @@
 
 <form class="" action="/stock" method="post">
   <label for="">Book</label>
-  <select class="" name="book_id">
+  <select required class="" name="book_id">
     <% for book in @books %>
       <% if @book_ids.include?(book.id.to_s) == false %>
         <option value="<%= book.id %>"><%= book.title %></option>
@@ -11,13 +11,13 @@
   </select>
 
   <label for="">Quantity</label>
-  <input type="number" name="quantity" value="">
+  <input required type="number" min="0" name="quantity" value="">
 
   <label for="">Buying Cost</label>
-  <input type="number" name="buying_cost" value="">
+  <input required type="number" min="0" step='0.25' name="buying_cost" value="">
 
   <label for="">Selling Price</label>
-  <input type="number" name="selling_price" value="">
+  <input required type="number" min="0" step='0.25' name="selling_price" value="">
 
-  <input type="submit" value="Create Book">
+  <input required type="submit" value="Create Book">
 </form>
