added table to stock index page

--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -10,31 +10,49 @@
 </form>
 <a href="/stock/new">Create new item</a>
 
-<% for genre in @genres %>
-  <% if @sorted_by_genre[genre.downcase].length != 0 %>
-    <h1><%= genre %>:</h1>
-    <% for item in @sorted_by_genre[genre.downcase]%>
-      <% book_id = item.book_id %>
-      <% book = Book.find_by_id(book_id) %>
-          <ul>
-            <li>Book title: <a href="/books/<%= book.id %>"><%= book.title %></a></li>
-            <% if item.check_quantity_low %>
-              <li style="color: red;">Quantity: <%= item.quantity %></li>
-            <% else %>
-              <li>Quantity: <%= item.quantity %></li>
+<table style="width:100%">
+  <tr>
+    <th>Genre</th>
+    <th>Book Title</th>
+    <th>Quantity</th>
+    <th>Buyin cost</th>
+    <th>Selling price</th>
+    <th>Maruk value</th>
+    <th>Change Quantity</th>
+    <th>Delete item</th>
+  </tr>
+    <% for genre in @genres %>
+      <% if @sorted_by_genre[genre.downcase].length != 0 %>
+        <tr>
+          <th><%= genre %></th>
+        </tr>
+            <% for item in @sorted_by_genre[genre.downcase]%>
+              <% book_id = item.book_id %>
+              <% book = Book.find_by_id(book_id) %>
+              <tr>
+              <th></th>
+              <th><a href="/books/<%= book.id %>"><%= book.title %></a></th>
+              <% if item.check_quantity_low %>
+              <th style="color: red;"><%= item.quantity %></th>
+              <% else %>
+              <th><%= item.quantity %></th>
+              <% end %>
+              <th>£<%= item.buying_cost %></th>
+              <th>£<%= item.selling_price %></th>
+              <th>£<%= item.markup %></th>
+              <th>
+                <form class="" action="/stock/<%= item.id %>" method="post">
+                  <input type="number" name="quantity" value="<%= item.quantity %>">
+                  <input type="submit" name="" value="Update Quantity">
+                </form>
+              </th>
+              <th>
+                <form class="" action="/stock/<%= item.id %>/delete" method="post">
+                  <input type="submit" name="" value="Delete Item">
+                </form>
+              </th>
+              </tr>
             <% end %>
-
-            <li>Buying cost: £<%= item.buying_cost %></li>
-            <li>Selling price: £<%= item.selling_price %></li>
-            <li>Markup value: £<%= item.markup %></li>
-          </ul>
-          <form class="" action="/stock/<%= item.id %>" method="post">
-            <input type="number" name="quantity" value="<%= item.quantity %>">
-            <input type="submit" name="" value="Update Quantity">
-          </form>
-          <form class="" action="/stock/<%= item.id %>/delete" method="post">
-            <input type="submit" name="" value="Delete Item">
-          </form>
+      <% end %>
     <% end %>
-  <% end %>
-<% end %>
+</table>
