created css file and link to layout.erb

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Book Shop</title>
+    <link rel="stylesheet" href="stlye.css">
   </head>
   <body>
     <nav>
