--- a/views/authors/index.erb
+++ b/views/authors/index.erb
@@ -1,10 +1,21 @@
 <h1>This is the authors index page</h1>
 
-
-<% for author in @authors %>
-  <ul>
-    <li><a href="/authors/<%= author.id %>"><%= author.pretty_name %></a></li>
-  </ul>
-<% end %>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Books</th>
+  </tr>
+  <% for author in @authors %>
+    <% books = author.books %>
+    <tr>
+      <th><a href="/authors/<%= author.id %>"><%= author.pretty_name %></a></th>
+      <th class='books_authors'>
+        <% for book in books %>
+          <span><%= book.title %></span>
+        <% end %>
+      </th>
+    </tr>
+  <% end %>
+</table>
 
 <a href="/authors/new">Create new author</a>
